lab10/myfrontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: my-frontend-deployment
  labels:
    app: my-frontend
    type: frontend

spec:
  template:
    metadata:
      name: myfrontend-pod
      labels:
        app: my-frontend
        type: frontend
    spec:
      containers:
        - name: my-frontend-container
          image: xvoxin/kube-frontend
  replicas: 1
  selector:
    matchLabels:
      app: my-frontend
      type: frontend
