lab10/ingress-service.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata: 
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        
spec: 
    rules:
      - http:
            paths:
              - path: /api/?(.*)
                backend:
                    serviceName: mybackend-service
                    servicePort: 5000
              - path: /(.*)
                backend: 
                    serviceName: myfrontend-service
                    servicePort: 3000
